--- a/app/index.html
+++ b/app/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Kodego Website</title>
-   <script src="https://unpkg.com/lodash@4.17.20"></script>
+    <title>KodeGo</title>
+   
   </head>
   <body>
-    <img src="./images/kodego-large.svg" alt="Kodego Logo"
+    <img src="assets/images/kodego-large.svg" alt="Kodego Logo">
     <ul>
       <li><a href="#">About Us</a></li>
       <li> <a href="#">How It Works</a></li>
@@ -18,7 +18,7 @@
   </ul>
   <div>
     <a href="#">Sign In</a>
-    <a href="#">Apply ow</a>
+    <a href="#">Apply Now</a>
 
   </div>
    
