Test initial bundling of assets

--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
    
   </head>
   <body>
+    <header>
     <img src="assets/images/kodego-large.svg" alt="Kodego Logo">
     <ul>
       <li><a href="#">About Us</a></li>
@@ -19,8 +20,9 @@
   <div>
     <a href="#">Sign In</a>
     <a href="#">Apply Now</a>
-
+  </header>
   </div>
+  <script src="bundled.js"></scriptsrc></script>
    
   </body>
 </html>
