Update html markup

--- a/app/images/index.html
+++ b/app/images/index.html
@@ -2,11 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Kodego Website</title>
-   <script src="https://unpkg.com/lodash@4.17.20"></script>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>KodeGo</title>
+   
   </head>
   <body>
-    <img src="./images/kodego-large.svg" alt="Kodego Logo"
+    <header>
+    <img src="app/images/kodego-large.svg" alt="Kodego Logo">
     <ul>
       <li><a href="#">About Us</a></li>
       <li> <a href="#">How It Works</a></li>
@@ -18,9 +21,9 @@
   </ul>
   <div>
     <a href="#">Sign In</a>
-    <a href="#">Apply ow</a>
-
+    <a href="#">Apply Now</a>
   </div>
+</header>
    
   </body>
 </html>
