Adding hero-section styles

--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
       </div>
     </header>
     <section class="hero">
-      <div class="container container--wide">
+      <div class="hero__container container container--wide">
         <div class="hero__text-content">
           <h1>We don’t just teach code, we produce top talent.</h1>
           <p>
