--- a/app/index.html
+++ b/app/index.html
@@ -8,16 +8,13 @@
   </head>
   <body>
     <header class="header">
-      <div class="container container--padded">
+      <div class="header__container container container--padded">
         <img
           class="header__logo"
           src="assets/images/kodego-large.svg"
           alt="KodeGo Logo"
         />
-        <div class="header__user-links">
-          <a class="btn" href="#">Sign In</a>
-          <a class="btn btn--primary" href="#">Apply Now</a>
-        </div>
+        <div class="header__mobile-nav-trigger">a</div>
         <nav class="header__nav">
           <ul>
             <li><a href="#">About Us</a></li>
@@ -28,6 +25,10 @@
             <li><a href="#">Careers</a></li>
             <li><a href="#">FAQ</a></li>
           </ul>
+          <div class="header__user-links">
+            <a class="btn" href="#">Sign In</a>
+            <a class="btn btn--primary" href="#">Apply Now</a>
+          </div>
         </nav>
       </div>
     </header>
@@ -46,7 +47,7 @@
         <div class="hero__image-container">
           <img
             class="hero__image"
-            src="assets/images/hero-banner.png"
+            src="assets/images/hero-banner-image.png"
             alt="KodeGo Banner Image"
           />
         </div>
