--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,14 @@
           src="assets/images/kodego-large.svg"
           alt="KodeGo Logo"
         />
-        <div class="header__mobile-nav-trigger">a</div>
+        <input
+          type="checkbox"
+          class="header__mobile-nav-toggle"
+          id="mobile-nav-toggle"
+        />
+        <label for="mobile-nav-toggle">
+          <div class="header__mobile-nav-trigger"></div>
+        </label>
         <nav class="header__nav">
           <ul>
             <li><a href="#">About Us</a></li>
@@ -47,7 +54,7 @@
         <div class="hero__image-container">
           <img
             class="hero__image"
-            src="assets/images/hero-banner.png"
+            src="assets/images/hero-banner-image.png"
             alt="KodeGo Banner Image"
           />
         </div>
